# talking_rock_core

./: .gitignore  pyproject.toml
src/trcore/: __init__.py  certainty.py  config.py  context_budget.py  db.py  db_crypto.py  errors.py  logging_setup.py  models.py  security.py  settings.py  types.py
src/trcore/atomic_ops/: __init__.py  classification_context.py  classifier.py  decomposer.py  entity_resolver.py  executor.py  feedback.py  models.py  processor.py  schema.py
src/trcore/atomic_ops/verifiers/: __init__.py  base.py  behavioral.py  intent.py  pipeline.py  safety.py  semantic.py  syntax.py
src/trcore/memory/: __init__.py  embeddings.py
src/trcore/providers/: __init__.py  base.py  factory.py  ollama.py  secrets.py
